[package]
name = "packtpub-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.8", features = ["json", "stream"] }
futures = "0.3"
futures-util = "0.3.19"
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.73", features = ["derive"] }
