[package]
name = "packtpub-dl"
authors = ["Federico Guerinoni <guerinoni.federico@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.8", features = ["json", "stream"] }
futures = "0.3"
futures-util = "0.3.19"
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.73", features = ["derive"] }
